--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
-  }
+  }, 
+  "homepage": "http://jmyacobn.github.io/overlook"
 }
