--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  }, 
-  "homepage": "http://jmyacobn.github.io/overlook"
+    "deploy": "gh-pages -d dist",
+    "homepage": "http://jmyacobn.github.io/overlook"
+  } 
 }
